// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test back only 1`] = `
<div
  className="Pinpoint Pagination "
>
  <div
    className="back"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="icon"
      data-icon="arrow-left"
      data-prefix="fas"
      focusable="false"
      height={18}
      role="img"
      viewBox="0 0 448 512"
      width={15.75}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back
  </div>
</div>
`;

exports[`Test both directions 1`] = `
<div
  className="Pinpoint Pagination "
>
  <div
    className="back"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="icon"
      data-icon="arrow-left"
      data-prefix="fas"
      focusable="false"
      height={18}
      role="img"
      viewBox="0 0 448 512"
      width={15.75}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
        fill="currentColor"
      />
    </svg>
    Back
  </div>
  <div
    className="forward"
    onClick={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="icon"
      data-icon="arrow-right"
      data-prefix="fas"
      focusable="false"
      height={18}
      role="img"
      viewBox="0 0 448 512"
      width={15.75}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Test default (neither direction) 1`] = `
<div
  className="Pinpoint Pagination "
/>
`;

exports[`Test forward only 1`] = `
<div
  className="Pinpoint Pagination "
>
  <div
    className="forward"
    onClick={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="icon"
      data-icon="arrow-right"
      data-prefix="fas"
      focusable="false"
      height={18}
      role="img"
      viewBox="0 0 448 512"
      width={15.75}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
